--- a/README
+++ b/README
@@ -1,4 +1,2 @@
-
-
-See https://github.com/esp8266/esp8266-wiki/wiki/gpio-registers if you get compile errors
-
+A program for the ESP8266 which lets it read from a 433mhz OOK (on-off keying) 
+radio receiver.
