--- a/README
+++ b/README
@@ -1,3 +1,14 @@
 A program for the ESP8266 which lets it read from a 433mhz OOK (on-off keying) 
 radio receiver. This has been extended to have the ESP8266 recognise sensors 
 from the ID they broadcast and serve a webpage showing which have been detected.
+
+If you want to use this code, go ahead. I'll license my code (under user/) as CC BY.
+However, the Makefile is the work of: zarya, Jeroen Domburg (Sprite_tm), 
+Christian Klippel (mamalala) and Tommie Gannert (tommie).
+
+If you want to replicate this project by uploading the code to an ESP8266, you'll
+have to recompile it, because the binaries in this repo are not current. Also, 
+you'll have to put your own WiFi credentials into user/wifi_config.h .
+
+For details on the build environment/SDK: https://github.com/esp8266/esp8266-wiki/wiki/Toolchain
+For a quick setup of the environment:     https://github.com/pfalcon/esp-open-sdk
